--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,7 @@
+upstream fastapi_server {
+    server fastapi:8000;
+}
+
 upstream thredds_server {
     server thredds:8080;
 }
@@ -12,6 +16,13 @@ upstream jupyter_server {
 
 server {
     listen 80;
+
+    location /fastapi_service/ {
+        proxy_set_header Host fastapi_server;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_pass http://fastapi_server/;
+    }
 
     location /thredds/ {
         proxy_set_header Host $host:8080;
